--- a/PBL/src/main/resources/templates/formulario.html
+++ b/PBL/src/main/resources/templates/formulario.html
@@ -18,7 +18,7 @@
     <input type="number" name="duracao" id="duracao" min="1" max="10" required><br>
 
     <label for="erroMaximo">Erro Máximo:</label>
-    <input type="number" step="0.0001" name="erroMaximo" id="erroMaximo" min="0.0001" required><br>
+    <input type="number" step="0.00000000001" name="erroMaximo" id="erroMaximo" max="0.0001" required><br>
 
     <button type="submit">Simular</button>
 </form>
