--- a/PBL/src/main/resources/templates/formulario.html
+++ b/PBL/src/main/resources/templates/formulario.html
@@ -9,7 +9,7 @@
 
 <form action="#" th:action="@{/simularOnda}" method="get">
     <label for="frequencia">Frequência (Hz):</label>
-    <input type="number" step="0.01" name="frequencia" id="frequencia" min="0.01" max="0.5" required><br>
+    <input type="number" step="0.01" name="frequencia" id="frequencia" min="0.000000000001" max="0.5" required><br>
 
     <label for="comprimentoOnda">Comprimento de Onda (m):</label>
     <input type="number" step="0.01" name="comprimentoOnda" id="comprimentoOnda" min="0.2" max="2" required><br>
@@ -18,7 +18,7 @@
     <input type="number" name="duracao" id="duracao" min="1" max="10" required><br>
 
     <label for="erroMaximo">Erro Máximo:</label>
-    <input type="number" step="0.00000000001" name="erroMaximo" id="erroMaximo" max="0.0001" required><br>
+    <input type="number" name="erroMaximo" id="erroMaximo" min="0.0000000000000000000001" required><br>
 
     <button type="submit">Simular</button>
 </form>
