--- a/PBL/src/main/resources/templates/formulario.html
+++ b/PBL/src/main/resources/templates/formulario.html
@@ -9,7 +9,7 @@
 
 <form action="#" th:action="@{/simularOnda}" method="get">
     <label for="frequencia">Frequência (Hz):</label>
-    <input type="number" step="0.01" name="frequencia" id="frequencia" min="0.000000000001" max="0.5" required><br>
+    <input type="number" step="0.01" name="frequencia" id="frequencia" min="0" max="0.5" required><br>
 
     <label for="comprimentoOnda">Comprimento de Onda (m):</label>
     <input type="number" step="0.01" name="comprimentoOnda" id="comprimentoOnda" min="0.2" max="2" required><br>
