--- a/PBL/src/main/resources/templates/formulario.html
+++ b/PBL/src/main/resources/templates/formulario.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Simulação da Onda Transversal</h1>
 
-<form action="#" th:action="@{/simularOnda}" method="get">
+<form action="#" th:action="@{/salvarFormulario}" method="post">
     <label for="frequencia">Frequência (Hz):</label>
     <input type="number" step="0.01" name="frequencia" id="frequencia" min="0.01" max="0.5" required><br>
 
