--- a/PBL/src/main/resources/static/css/style.css
+++ b/PBL/src/main/resources/static/css/style.css
@@ -82,24 +82,8 @@ button:hover {
 
 
 /* Estilo para o botão de exclusão */
+/* Estilo para links */
 a {
-    padding: 5px 10px;
-    margin-right: 5px;
-    text-decoration: none;
-    border-radius: 4px;
-}
-
-a[href*='deletarUsuario'] {
-    background-color: #f44336; /* Cor vermelha para o botão de exclusão */
-    color: white;
-}
-
-a[href*='deletarUsuario']:hover {
-    background-color: #d32f2f; /* Tom mais escuro ao passar o mouse */
-}
-
-/* Estilo para o botão de voltar */
-.btn-voltar {
     display: inline-block;
     background-color: #4CAF50;
     color: white;
@@ -108,6 +92,37 @@ a[href*='deletarUsuario']:hover {
     border-radius: 5px;
 }
 
+a:hover {
+    background-color: #45a049;
+}
+
+.btn-excluir {
+    background-color: #f44336;
+    color: white;
+}
+
+.btn-excluir:hover {
+    background-color: #d32f2f;
+}
+
+.btn-voltar {
+    background-color: #4CAF50;
+}
+
 .btn-voltar:hover {
     background-color: #45a049;
+}
+
+/* Centralizar o gráfico e definir tamanho */
+.grafico-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+#graficoOnda {
+    width: 909px; Ajuste conforme necessário
+    height: 454px; Ajuste conforme necessário
+    max-width: 100%;
+    max-height: 100%;
 }
