--- a/PBL/src/main/resources/templates/formulario.html
+++ b/PBL/src/main/resources/templates/formulario.html
@@ -18,9 +18,9 @@
     <input type="number" name="duracao" id="duracao" min="1" max="10" required>
 
     <label for="erroMaximo">Erro Máximo:</label>
-    <input type="number" name="erroMaximo" id="erroMaximo" min="0.0000000000000000000001" required>
+    <input type="number" name="erroMaximo" id="erroMaximo" step="any" max="1" required>
 
-    <button type="submit">Simular</button>
+    <button type="submit">Simular</button> <a href="/" class="btn-voltar">Voltar ao Menu</a>
 </form>
 </body>
 </html>
