--- a/PBL/src/main/resources/static/css/style.css
+++ b/PBL/src/main/resources/static/css/style.css
@@ -126,3 +126,19 @@ a:hover {
     max-width: 100%;
     max-height: 100%;
 }
+
+/* Estilo para o menu inicial */
+.menu-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.menu-container a {
+    margin: 10px;
+    padding: 15px 25px;
+    font-size: 18px;
+    text-align: center;
+    width: 200px;
+}
