--- a/PBL/src/main/resources/templates/grafico.html
+++ b/PBL/src/main/resources/templates/grafico.html
@@ -5,6 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="text/javascript">
         const parametrosSimulacao = {
+            id_simulacao: [[${id_simulacao}]],
             frequencia: [[${frequencia}]],
             comprimentoOnda: [[${comprimentoOnda}]],
             duracao: [[${duracao}]],
@@ -15,11 +16,17 @@
 </head>
 <body>
 <h1>Gráfico da Onda Transversal</h1>
+
 <div class="grafico-container">
     <canvas id="graficoOnda"></canvas>
 </div>
 
-<br>
+<div>
+    <label for="tempo">Escolha o tempo (0 a 9.9 segundos, de 0.1 em 0.1): </label>
+    <input type="number" id="tempo" min="0" max="10" step="0.1" placeholder="Ex: 1.5">
+    <button onclick="mostrarPontoNoTempo()">Mostrar Ponto</button>
+</div>
+
 <a href="/" class="btn-voltar">Voltar ao Menu</a>
 <script th:src="@{/js/script.js}"></script>
 </body>
