--- a/PBL/src/main/resources/templates/grafico.html
+++ b/PBL/src/main/resources/templates/grafico.html
@@ -21,11 +21,12 @@
     <canvas id="graficoOnda"></canvas>
 </div>
 
-<div>
+<!-- Formulário com evento de teclado -->
+<form id="tempoForm" onsubmit="mostrarPontoNoTempo(); return false;">
     <label for="tempo">Escolha o tempo (0 a 9.9 segundos, de 0.1 em 0.1): </label>
     <input type="number" id="tempo" min="0" max="10" step="0.1" placeholder="Ex: 1.5">
-    <button onclick="mostrarPontoNoTempo()">Mostrar Ponto</button>
-</div>
+    <button type="button" onclick="mostrarPontoNoTempo()">Mostrar Ponto</button>
+</form>
 
 <a href="/" class="btn-voltar">Voltar ao Menu</a>
 <script th:src="@{/js/script.js}"></script>
