--- a/PBL/src/main/resources/templates/creditos.html
+++ b/PBL/src/main/resources/templates/creditos.html
@@ -10,19 +10,19 @@
 <div class="credits-container">
   <div class="member">
     <h2>Arthur Benevides dos Santos</h2>
-    <p>RA: 123456789</p>
+    <p>082230016</p>
   </div>
   <div class="member">
-    <h2>Nome do Membro 2</h2>
-    <p>RA: 987654321</p>
+    <h2>Guilherme Matheus Teixeira Costa</h2>
+    <p>081240041</p>
   </div>
   <div class="member">
-    <h2>Nome do Membro 3</h2>
-    <p>RA: 112233445</p>
+    <h2>Juan Hernandes Haddad Pavani</h2>
+    <p>081240043</p>
   </div>
   <div class="member">
-    <h2>Nome do Membro 4</h2>
-    <p>RA: 556677889</p>
+    <h2>Murillo Ando Zambolin</h2>
+    <p>082240042</p>
   </div>
 </div>
 
