--- a/PBL/src/main/resources/templates/grafico.html
+++ b/PBL/src/main/resources/templates/grafico.html
@@ -4,6 +4,7 @@
     <title>Gráfico da Onda Transversal</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="text/javascript">
+        // Inicializando as variáveis usando Thymeleaf
         const parametrosSimulacao = {
             id_simulacao: [[${id_simulacao}]],
             frequencia: [[${frequencia}]],
@@ -21,7 +22,6 @@
     <canvas id="graficoOnda"></canvas>
 </div>
 
-<!-- Formulário com evento de teclado -->
 <form id="tempoForm" onsubmit="mostrarPontoNoTempo(); return false;">
     <label for="tempo">Escolha o tempo para vermos o ponto <br>(0 a 10 segundos, de 0.1 em 0.1): </label>
     <input type="number" id="tempo" min="0" max="10" step="0.1" placeholder="Ex: 1.5">
