--- a/PBL/src/main/resources/templates/grafico.html
+++ b/PBL/src/main/resources/templates/grafico.html
@@ -28,7 +28,10 @@
     <button type="button" onclick="mostrarPontoNoTempo()">Mostrar Ponto</button>
 </form>
 
-<a href="/" class="btn-voltar">Voltar ao Menu</a>
+<div class="botoes">
+    <a href="/" class="btn-voltar">Voltar ao Menu</a>
+    <a href="/historico" class="btn-voltar">Acessar Histórico</a>
+</div>
 <script th:src="@{/js/script.js}"></script>
 </body>
 </html>
